--- a/index.html
+++ b/index.html
@@ -3,11 +3,35 @@
 <head>
 	<meta charset="utf-8">
 	<title>shualeduri</title>
-	<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,900;1,500&display=swap" rel="stylesheet">	<script src="https://kit.fontawesome.com/3bb0c1f66e.js" crossorigin="anonymous"></script>
+	<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,900;1,500&display=swap" rel="stylesheet">
+	<script src="https://kit.fontawesome.com/3bb0c1f66e.js" crossorigin="anonymous"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+	<header class="header-bg">
+		<div class="header-flex">
+			<a href="#">Zetta Hotels</a>
+
+			<nav>
+				<ul class="nav-ul">
+					<li> <a href="#" class="home"> HOME </a> </li>
+					<li> <a href="#"> ROOMS </a> </li>
+					<li> <a href="#"> RESTAURANT </a> </li>
+					<li> <a href="#"> ABOUT US </a> </li>
+					<li> <a href="#"> BLOG </a> </li>
+					<li> <a href="#"> CONTACT </a> </li>
+				</ul>
+			</nav>
+		</div>
+
+		<div class="satauri">
+			<h1> About Us </h1>
+		</div>
+
+	
+
+	</header>
 </body>
 </html>
