--- a/index.html
+++ b/index.html
@@ -30,7 +30,25 @@
 			<h1> About Us </h1>
 		</div>
 
-	
+		<section>
+			<div class="box">
+				<div class="box1">
+					<div class="satauri1">
+						<p class="home"> ABOUT US </p>
+						<h1 class="home1"> Trust and quality</h1>
+						<h1 class="home1"> are our atuus </h1>
+					</div>
+					<div class=text>
+						<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis </p>
+						<p class="p1"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+
+						<button type="Send" form="nameform" value="Submit">Read more</button>
+					</div>
+				</div>
+				<div class="box2">
+				</div>
+			</div>
+		</section>
 
 	</header>
 </body>
