--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
 					</div>
 				</div>
 				<div class="box2">
+					<div class="ori-surati">
+						<img src="img/surati1.jpg" alt="image" class="surati1">
+						<img src="img/surati2.jpg" alt="image" class="surati2">
+					</div>
+					<div class="didi-surati">
+						<img src="img/surati3.jpg" alt="image" class="surati3">
+					</div>
 				</div>
 			</div>
 		</section>
