--- a/index.html
+++ b/index.html
@@ -57,6 +57,17 @@
 			</div>
 		</section>
 
+		<section2>
+			<div class="header2-bg">
+				<div class="satauri2">
+					<h1> We bring you the </h1>
+					<h1> finest details </h1>
+				</div>
+				<div class="abus">
+					<p> ABOUT US </p>
+				</div>
+			</div>
+		</section2>
 	</header>
 </body>
 </html>
