--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis </p>
 						<p class="p1"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
 
-						<button type="Send" form="nameform" value="Submit">Read more</button>
+						<button>Read more</button>
 					</div>
 				</div>
 				<div class="box2">
@@ -57,7 +57,7 @@
 			</div>
 		</section>
 
-		<section2>
+		<section>
 			<div class="header2-bg">
 				<div class="satauri2">
 					<h1> We bring you the </h1>
@@ -66,8 +66,59 @@
 				<div class="abus">
 					<p> ABOUT US </p>
 				</div>
+
+				<div class="yutebi">
+					<div class="yuti1">
+						<div class="img-box">
+							<img src="img/hotel.svg" alt="logo">
+						</div>
+						<div class="sataurebi">
+							<h2> Free Wifi </h2>
+							<h2> to stay connected </h2>
+						</div>
+						<div class="teqsti">
+							<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor </p>
+						</div>
+					</div>
+					<div class="yuti2">
+						<div class="img-box">
+							<img src="img/hotel.svg" alt="logo">
+						</div>
+						<div class="sataurebi">
+							<h2> 4K Television and </h2>
+							<h2> Netflix included </h2>
+						</div>
+						<div class="teqsti">
+							<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor </p>
+						</div>
+					</div>
+					<div class="yuti3">
+						<div class="img-box">
+							<img src="img/hotel.svg" alt="logo">
+						</div>
+						<div class="sataurebi">
+							<h2> Span zone where </h2>
+							<h2> you can chill </h2>
+						</div>
+						<div class="teqsti">
+							<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor </p>
+						</div>
+					</div>
+					<div class="yuti4">
+						<div class="img-box">
+							<img src="img/hotel.svg" alt="logo">
+						</div>
+						<div class="sataurebi4">
+							<h2> Spacious rooms </h2>
+							<h2> for awesome parties </h2>
+						</div>
+						<div class="teqsti">
+							<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor </p>
+						</div>
+					</div>
+				</div>
 			</div>
-		</section2>
+		</section>
 	</header>
 </body>
 </html>
